feat(mvc): 添加跨域配置支持并优化集合初始化
添加全局跨域配置支持，允许所有域名、请求头和方法的访问
将Set.of()替换为Collections.emptySet()以提高兼容性